[package]
name = "aarnn-nsys"
version = "0.1.0"
edition = "2021"

[features]
# Default: std binary with Linux shared memory backend enabled
default = ["std", "linux-shm"]
# Enable std support (on by default for binary). In bare/no_std builds this is disabled.
std = []
# no_std/bare-metal support for the bus library (no CLI, no libc)
bare = []
# Linux shared memory backend; requires std and libc
linux-shm = ["std", "libc"]

[dependencies]
libc = { version = "0.2", optional = true }

[dev-dependencies]
# none

[[example]]
name = "bare_in_memory"
required-features = ["bare"]
